0.9.3 (trunk):
* Use Zurb Foundation to control the layout of the generated pages.

0.9.2 (2013-12-22):
* Handle duplicate module names more gracefully.
* Use `cohttp-server` from `opam install async cohttp` if available.

0.9.1 (2013-12-20):
* Explicitly invoke bash since some scripts use bash-isms.
* Do not actually change the current compiler switch when using `opam doc`.
* Make `opam-doc` more relaxed about errors.

0.9.0 (2013-12-19):
* Initial release