@@ -4,19 +4,17 @@ set -e
 
 # Dirty work-around to not start the documention server
 SERVE=opam-doc-serve
-case "$1" in
-    --version)
-	echo "0.9.3"
-	exit 0
-	;;
-    --no-server)
-	SERVE="echo To run the server, use: opam-doc-serve"
-	shift
-	;;
-esac
+
+while getopts "nv" opt; do
+  case $opt in
+  v) echo 0.9.3; exit 0 ;;
+  n) NOSERVE=1 ;;
+  *) echo "Usage: $0 <pkgs> [-n]"; exit 0 ;;
+  esac
+done
+shift $(($OPTIND - 1))
 
 PACKAGES=$*
-
 DOC=$(opam config var root)/doc/doc
 BIN=$(opam config var bin)
 BINDOC=$(opam config var root)/doc/bin
@@ -28,8 +26,9 @@ cp ${BIN}/opam-doc-ocamlc.opt ${BINDOC}/ocamlc.opt
 cp ${BIN}/bin-doc ${BINDOC}/bin-doc
 
 # Install the packages and keep the build dirs
-echo "[1/4] Installing the packages"
-opam install ${PACKAGES} -y -b --switch=doc
+echo "[1/4] Installing the packages: $PACKAGES"
+opam config env --switch=doc
+opam install ${PACKAGES} -y -b --switch=doc --verbose
 
 # Collect all the .cmd files in the build dirs
 echo "[2/4] Collect the binary documentation files"
@@ -40,5 +39,9 @@ echo "[3/4] Build the HTML pages"
 opam-doc-create
 
 # Serve the contents
-echo "[4/4] Serve the contents of ${DOC} at http://127.0.0.1:8000"
-${SERVE} ${DOC}
+if [ "$NOSERVE" = "1" ]; then
+  echo "To run server use: opam doc-serve"
+else
+  echo "[4/4] Serve the contents of ${DOC} at http://127.0.0.1:8000"
+  ${SERVE} ${DOC}
+fi
