@@ -1,5 +1,6 @@
 0.9.3 (trunk):
 * Use Zurb Foundation to control the layout of the generated pages.
+* `opam doc -n <pkgs>` runs without a server now (instead of `--no-server`).
 
 0.9.2 (2013-12-22):
 * Handle duplicate module names more gracefully.
